Spacing fixes

--- a/components/EducationCard.module.css
+++ b/components/EducationCard.module.css
@@ -52,10 +52,11 @@
   font-weight: 500;
   color: var(--brightWhite);
   font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .educationCardLeft {
-  flex: 1 0 0;
+  flex: 1.5 0 0;
   /* letter-spacing: 0.025em; */
 }
 .educationCardMiddle {
@@ -63,7 +64,7 @@
   /* letter-spacing: 0.025em; */
 }
 .educationCardRight {
-  flex: 1 0 0;
+  flex: 0.6 0 0;
 }
 /* .educationCardTechStack {
   display: flex;
